fixed a lot of config errors

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' https://*; worker-src blob:" />
-  <title>ERWT Boilerplate</title>
+  <meta http-equiv="Content-Security-Policy"
+    content="script-src 'self' 'unsafe-eval' https://*; worker-src blob: 'self'" />
+  <title>8BitSimulator v2</title>
 </head>
 
 <body>
